bootstarp in Action

--- a/frontline/css/style.css
+++ b/frontline/css/style.css
@@ -1,58 +1,16 @@
-#htmlmain
+#pageheader
 {
-  position:relative;
+  color:red;
+  background-color:lightgrey;
 }
-#explorediv
-{
-  float:left;
-  background-color:grey;
-  border:2px solid black;
-}
-#navigation
+#explore
 {
   background-color:grey;
-  position:relative;
-  float:left;
-  border:2px solid black;
-}
-
-#TYPE
-{
-  position:relative;
-  top:500;
+  height:100%;
   
 }
-
-#sortBY
-{
-  
- float:left;  
-}
-
-#header
-{
-  
-  text-align:centre;
-  color:red; 
-  background-color:yellow;
-  padding:5px;
-}
-#search
-{
-  
-  
-}
-section {
-    width:530px;
-    height:400px;
-    float:right;
-    padding:10px;
-    background-color:grey;
-}
-nav {
-    line-height:30px;
-    background-color:#eeeeee;
-    float:left;
-    height:400px;
-    padding:11px; 
-}
+.row.content {height:500px}
+.sidenav {
+      background-color: #f1f1f1;
+      height: 100%;
+    }
