--- a/djangokickoff/ecomstore/ecomstore/templates/catalog.html
+++ b/djangokickoff/ecomstore/ecomstore/templates/catalog.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 
 {% block site_wrapper %}
 <div id="main">
@@ -18,7 +19,7 @@
  <div class="sidebarIEPadder">
  [search box here]
  <br />
- [category listing here]
+ {% include "tags/category_list.html" %} 
  </div>
  </div>
  <div id="content">
